--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			   
 		</table>
 	</div>
-        <div id="right" style="float:left;width:25%;background: beige;padding: 10px;">
+        <div id="right" style="float:left;width:25%;background: #fcf6bf;padding: 10px;">
 		<div id="prevAnswer" style="height:700px;overflow:auto">
 				Welcome! When you are ready, click the go button. You will see a
 				question on the left. After completing your answer, click GO
