--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 			   
 		</table>
 	</div>
-        <div id="right" style="float:left;width:25%;background: #fcf6bf;padding: 10px;">
-		<div id="prevAnswer" style="height:700px;overflow:auto">
+        <div id="right" style="float:left;width:25%;background: #fcf6bf;padding: 10px;border:1px solid black">
+		<div id="prevAnswer" style="height:640px;overflow:auto;">
 				Welcome! When you are ready, click the go button. You will see a
 				question on the left. After completing your answer, click GO
 			      </div>
