--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
          function getQA(){
             qindex = 0;
 	    record();
-            url ="https://script.google.com/macros/s/AKfycbwZzkUxaPd0yI27lGW4eCDUmvepJ7qdAJUxPg1XHiYlH4Yr5qyx0JvsifJoDID1WKlx/exec?getQA=Python";
+            url ="https://script.google.com/macros/s/AKfycbwZzkUxaPd0yI27lGW4eCDUmvepJ7qdAJUxPg1XHiYlH4Yr5qyx0JvsifJoDID1WKlx/exec?getQA=Calculus";
       $("#result").html("Loading..." );
             $.get(url, function(data){
 
