--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             qindex = 0;
 	    record();
       topic = $("#topic").val;
-      url ="https://script.google.com/macros/s/AKfycbxcHmR_0qVo4-5Z_LnT0sCZlbqqRsn8R-V-Pc-lRmqIV8eBM5UwWbofsigLD3Aw5Q/exec?getQA="+topic;;
+      url ="https://script.google.com/macros/s/AKfycbxcHmR_0qVo4-5Z_LnT0sCZlbqqRsn8R-V-Pc-lRmqIV8eBM5UwWbofsigLD3Aw5Q/exec?getQA=Python"//+topic;;
       $("#result").html("Loading..." );
             $.get(url, function(data){
 
