--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				  <div
 				    id="result"
 				    style="height: 200px;width: 600px;font-size: 14px;font-family:helvetica;overflow:auto;"
-				  ></div>
+				  ></div> <input id="topic" type"text>
 				</td>
 			      </tr>
 			      <tr>
@@ -136,7 +136,7 @@
 				  </div>
 				</td>
 				<td>
-             <input id="topic" type"text><button id="send" onclick="showNext()">Go</button><br />
+            <button id="send" onclick="showNext()">Go</button><br />
 				  <textarea
 				    id="prompt_div" placeholder ="Enter your answer here"
 				    style="height: 300px;width: 100%;font-size: 14px;font-family:helvetica"
