--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 				  <div
 				    id="result"
 				    style="height: 200px;width: 600px;font-size: 14px;font-family:helvetica;overflow:auto;"
-				  ></div> <input id="topic" type"text>
+				  ></div> <input id="topic" placeholder ="Enter a topic" type"text>
 				</td>
 			      </tr>
 			      <tr>
