--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 				</td>
 				<td>
 				  <div
-				    id="result"
+				    id="result" placeholder ="Questions will appear here"
 				    style="height: 200px;width: 600px;font-size: 14px;font-family:helvetica;overflow:auto;"
 				  ></div> <input id="topic" placeholder ="Enter a topic" type"text>
 				</td>
