--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
 				  <div
 				    id="result" placeholder ="Questions will appear here"
 				    style="height: 200px;width: 600px;font-size: 14px;font-family:helvetica;overflow:auto;"
-				  ></div> <input id="topic" placeholder ="Enter a topic" type"text>
+				  ></div> 
+					<select id="topic" name="topic" placeholder="Select a topic">
+					  <option value="Python">Python</option>
+					  <option value="Java">Java</option>
+					  <option value="Algorithm">Algorithm</option>
+					  <option value="Calculus">Calculus</option>
+					</select>
 				</td>
 			      </tr>
 			      <tr>
