--- a/askai.html
+++ b/askai.html
@@ -30,7 +30,7 @@
 
 </script>
 
-<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica" placeholder="What do you want to ask AI"></textarea><br>button id="send" onclick="askAI()">Send</button><br>
+<textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica" placeholder="What do you want to ask AI"></textarea><br><button id="send" onclick="askAI()">Send</button><br>
 
 <div id="result" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></div>
 </body>  
