--- a/askai.html
+++ b/askai.html
@@ -24,7 +24,7 @@
             },
             success: function(result) {
                 $("#result").html(result);
-                  $("#form").hide())
+                  $("#form").hide();
             }
         });
     }
