--- a/askai.html
+++ b/askai.html
@@ -6,9 +6,9 @@
 <body>  
 
 <div id="container">
-<div style="height:20px;background:gray" id="header">toggle</div>
+<div style="height:20px;background:gray" id="header" onclick='$("#form").toggle();'>toggle</div>
 <button onclick='askAI("56*78")'>another question</button>
-<div id="form">
+<div id="form" >
 <textarea id="prompt_div" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica" placeholder="What do you want to ask AI"></textarea><br><button id="send" onclick="askAI()">Send</button><br>
 </div>
 <div id="result" style="height: 300px;width: 80%;font-size: 14px;font-family:helvetica"></div>
