--- a/j.html
+++ b/j.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 </head>
 <body>
-  <h1>1.2 Job Description Summarizer</h1>
+  <h1>1.21 Job Description Summarizer</h1>
   <form>
     <label for="job-description">Enter the job description:</label><br>
     <textarea id="job-description" name="job-description" rows="10" cols="50"></textarea><br>
@@ -51,7 +51,8 @@
     function process(){
       summarize();
       s = document.getElementById('summary').textContent;
-      askai(s);
+      q = "list key skills and competencies from this in html format: ";
+      askai(q+s);
       
       
     }
