--- a/j.html
+++ b/j.html
@@ -16,8 +16,9 @@
   </div>
     <div id="right" style="width:45%; margin:2%; float:left; border:1px solid gray">
   <div id="summary" style="display:none">summarized text will appear here</div>
-  <input id="question" size="30" placeholder="Enter your question" value="list key skills and competencies from this in html format:" /><input type="button" value="Process" onclick="process()">
-  <div id="result" > AI will write here...</div>
+  <input id="question" size="60" placeholder="Enter your question" value="list key skills and competencies from this in html format:" /><input type="button" value="Process" onclick="process()">
+  
+      <br><div id="result" > AI will write here...</div>
     </div>
   </div>
   <script>
