--- a/openai.html
+++ b/openai.html
@@ -1,10 +1,10 @@
 <html>
 <body>
-Hello world!
+Hello world! 1.0
 <script>
 const prompt = "Hello, OpenAI";
 const api_key = "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";
-const url = "https://api.openai.com/v1/engines/davinci-codex/completions";
+const url = "https://api.openai.com/v1/chat/completions";
 
 fetch(url, {
   method: "POST",
@@ -13,12 +13,12 @@ fetch(url, {
     "Authorization": `Bearer ${api_key}`
   },
   body: JSON.stringify({
-    "prompt": prompt,
-    "max_tokens": 5
-  })
+    "model": "gpt-3.5-turbo",
+    "messages":[{"role": "system", "content": WhoamI},{"role": "user", "content": PROMPT}]
+    })
 })
 .then(response => response.json())
-.then(data => console.log(data.choices[0].text))
+.then(data => alert(data.choices[0].text))
 .catch(error => console.error(error));
 </script>
 </body>
