--- a/openai.html
+++ b/openai.html
@@ -2,7 +2,7 @@
 <body>
 Hello world! 1.0
 <script>
-const prompt = "Hello, OpenAI";
+const PROMPT = "what is 4*5";
 const api_key = "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";
 const url = "https://api.openai.com/v1/chat/completions";
 
