--- a/resplus.html
+++ b/resplus.html
@@ -59,7 +59,7 @@
   <body>
     <div class="sidebar">
       <h2>My Sidebar</h2>
-      <textarea placeholder="Enter some text here..."></textarea>
+      <textarea  id="resume" placeholder="Enter some text here..."></textarea>
       <button onclick="askai()">Submit</button>
     </div>
     <div class="content">
@@ -68,13 +68,15 @@
     </div>
 
 <script>
-    function askai(){
-        scriptkey = "AKfycbw90Cos2xQbVU_ejF6lBfiK1K9mpBOj5w60KE_llxvr9lRfDmfgdVghPKKtMRYNyQV67g";
+  var questions = ["List all the linkedin skills based on this resume "];
+    function askai(q){
+        prompt = questions[q] + $("#resume").val();
+        scriptkey = "AKfycbwPfgbUDEaZF_aGu6QNT3Nmzvx9SK290QUWRGC66PLSM3xVCOKsRqEjldWPvvGwiF2aIA";
         url ="https://script.google.com/macros/s/"+scriptkey+"/exec"
-        $.post( url, { Q: "what is 4*5", W: "you are an assistant" })
+        $.post( url, { Q: prompt, W: "you are an assistant" })
         .done(function( data ) {
              console.log(data);
-        $(".sidebar").append('<textarea style="background: rgb(246, 246, 244);border: 1px solid gray;width: 250px;height: min-content;border-radius: 10px;padding: 4px;bottom: 0px;overflow: overlay;" cols="20" class="" rows="20">'+data+'</textarea>');
+        $(".sidebar").append('<textarea style="background: rgb(246, 246, 244);border: 1px solid gray;width: 200px;height: min-content;border-radius: 10px;padding: 4px;bottom: 0px;overflow: overlay;" cols="20" class="" rows="20">'+data+'</textarea>');
    
         })
   .fail(function( error ) {
