--- a/resplus.html
+++ b/resplus.html
@@ -60,7 +60,7 @@
     <div class="sidebar">
       <h2>My Sidebar</h2>
       <textarea  id="resume" placeholder="Enter some text here..."></textarea>
-      <button onclick="askai()">Submit</button>
+      <button onclick="askai(0)">Submit</button>
     </div>
     <div class="content">
       <h1>Welcome to My Page</h1>
