--- a/resplus.html
+++ b/resplus.html
@@ -61,6 +61,7 @@
       <h2>My Sidebar</h2>
       <textarea  id="resume" placeholder="Enter some text here..."></textarea>
       <button onclick="askai(0)">Submit</button>
+      <div id='skills' style='height:200px;overflow:auto'></div>
     </div>
     <div class="content">
       <h1>Welcome to My Page</h1>
@@ -76,7 +77,7 @@
         $.post( url, { Q: prompt, W: "you are an assistant" })
         .done(function( data ) {
              console.log(data);
-        $(".sidebar").append('<textarea style="background: rgb(246, 246, 244);border: 1px solid gray;width: 200px;height: min-content;border-radius: 10px;padding: 4px;bottom: 0px;overflow: overlay;" cols="20" class="" rows="20">'+data+'</textarea>');
+        $("#skills").append('<div style="background: rgb(246, 246, 244);border: 1px solid gray;width: 200px;height: min-content;border-radius: 10px;padding: 4px;bottom: 0px;overflow: overlay;" cols="20" class="" rows="20">'+data+'</div>');
    
         })
   .fail(function( error ) {
