--- a/resplus.html
+++ b/resplus.html
@@ -61,7 +61,7 @@
   </head>
   <body>
     <div class="sidebar">
-      <h2>My Sidebar</h2>
+      <h2>Your profile</h2>
       <textarea  id="resume" placeholder="Enter some text here..."></textarea>
       <button onclick="askai('resskills',0)">Skills List</button>    <button onclick="askai(1)">Job title</button>
       <div id='resskills' style='height:200px;overflow:auto'></div>
@@ -71,7 +71,7 @@
       <p>This is the main page content. It can include text, images, and other elements.</p>
     </div>
  class="right sidebar">
-      <h2>My Sidebar</h2>
+      <h2>Job description</h2>
       <textarea  id="Description" placeholder="Enter some text here..."></textarea>
       <button onclick="askai('jdskills',0)">Skills List</button>    <button onclick="askai(1)">Job title</button>
       <div id='jdskills' style='height:200px;overflow:auto'></div>
