--- a/resplus.html
+++ b/resplus.html
@@ -73,7 +73,7 @@
       <h1>You will see enhanced Job description based on Resume</h1>
       <p>This is the main page content. It can include text, images, and other elements.</p>
     </div>
- class="right sidebar">
+<div class="right sidebar">
       <h2>Job description</h2>
       <textarea  id="Description" placeholder="Enter some text here..."></textarea>
       <button onclick="askai('jdskills',0)">Skills List</button>    <button onclick="askai(1)">Job title</button>
