--- a/resplus.html
+++ b/resplus.html
@@ -81,9 +81,10 @@
       <label id='jdskills'></label>
       
      </div>
+    <div class='right sidebar'>
       <textarea  id="description" placeholder="Enter a job description..."></textarea>
       <button onclick="askai('description','jdskills',0)">Skills List</button>    
-      
+      </div>
     </div>
 <script>
   var questions = ["List all the linkedin skills based on this ","List suitable job titles for this resume"];
