--- a/resplus.html
+++ b/resplus.html
@@ -108,7 +108,7 @@
    }
     $(".question").click(function(){
       
-      $(this).next().html("<img src='https://hackernoon.com/images/0*4Gzjgh9Y7Gu8KEtZ.gif' />");
+      $(this).next().html("<img height='50px' src='https://hackernoon.com/images/0*4Gzjgh9Y7Gu8KEtZ.gif' />");
       prompt = $(this).text() + $("#description").val();
       askai_generic(prompt, $(this).next());
       
