--- a/resplus.html
+++ b/resplus.html
@@ -110,7 +110,7 @@
   function addQuestions(){
    for(i=0; i < jd_questions.length;i++){
      
-    $("#extras").append('<b><li class="question" >'+ jd_questions + '</li></b><div class="answer"></div>');   
+    $("#extras").append('<b><li class="question" >'+ jd_questions[i] + '</li></b><div class="answer"></div>');   
      
    }
     $(".question").click(function(){
