--- a/resplus.html
+++ b/resplus.html
@@ -90,7 +90,7 @@
       <label id='jdskills'></label>
  
       <textarea  id="description" placeholder="Enter a job description..."></textarea>
-        <button id='submit'>Process this</button><div ='summary'></div><br>
+        <button id='submit'>Process this</button><div id='summary'></div><br>
       <ul id="extras" style="display:none">
         
         </ul>
