--- a/resplus.html
+++ b/resplus.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>My Page</title>
+    <title>AI job guru</title>
     <style>
       /* Set the overall style for the page */
       body {
